--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="page">
     <header>
-      <h1>Welcome to Saad Rizvi's / IBST Website</h1>
-      <p>Just a test for a landing page, while the site is being built..</p>
+      <h1>Welcome to IBST </h1>
+      <p>a simple (under construction) landing page, while the site is being built..</p>
     </header>
 
 
