--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <footer>
     <div class="footer">
-        Feel free to reach me: ibrizvi@gmail.com. <br>Credit to Axel Michel for the amazing animation.
+        Feel free to reach me: <a href="mailto:ibrizvi@gmail.com">here</a>. <br>Credit to Axel Michel for the amazing animation.
     </div>
   </footer>
   <div id="splash">
