--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="page">
     <header>
       <h1>Welcome to IBST </h1>
-      <p>a simple (under construction) landing page, while the site is being built..</p>
+      <p>a simple (under construction) landing page...</p>
     </header>
 
 
