--- a/index.html
+++ b/index.html
@@ -1,56 +1,1 @@
-<html>
-
-<head>
-  <link rel="stylesheet" type="text/css" href="animation.css">
-
-</head>
-
-<body>
-  <div class="page">
-    <header>
-      <h1>Welcome to IBST </h1>
-      <p>a simple (under construction) landing page...</p>
-    </header>
-
-
-
-
-  </div>
-  
-  <footer>
-    <div class="footer">
-        Feel free to reach me: <a href="mailto:ibrizvi@gmail.com">here</a>. <br>Credit to Axel Michel for the amazing animation.
-    </div>
-  </footer>
-  <div id="splash">
-    <div class="anim">
-      <div id="loader">
-        <svg version="1.1" width="60px" height="70px" viewBox="0 0 60 70">
-          <defs>
-            <filter id="f1" x="0" y="0">
-              <feGaussianBlur in="SourceGraphic" stdDeviation="2" />
-            </filter>
-          </defs>
-          <g id="airplane">
-            <path fill="#000" d="M0.677,20.977l4.355,1.631c0.281,0.104,0.579,0.162,0.88,0.16l9.76-0.004L30.46,41.58c0.27,0.34,0.679,0.545,1.112,0.541
-          h1.87c0.992,0,1.676-0.992,1.322-1.918l-6.643-17.439l6.914,0.002l6.038,6.037c0.265,0.266,0.624,0.412,0.999,0.418l1.013-0.004
-          c1.004-0.002,1.684-1.012,1.312-1.938l-2.911-7.277l2.912-7.278c0.372-0.928-0.313-1.941-1.313-1.938h1.017
-          c-0.375,0-0.732,0.15-0.996,0.414l-6.039,6.039h-6.915l6.646-17.443c0.354-0.926-0.33-1.916-1.321-1.914l-1.87-0.004
-          c-0.439,0.004-0.843,0.203-1.112,0.543L15.677,17.24l-9.765-0.002c-0.3,0.002-0.597,0.055-0.879,0.16L0.678,19.03
-          C-0.225,19.36-0.228,20.637,0.677,20.977z" transform="translate(44,0) rotate(90 0 0)" />
-          </g>
-          <g id="shadow" transform="scale(.9)">
-            <path fill="#000" fill-opacity="0.3" d="M0.677,20.977l4.355,1.631c0.281,0.104,0.579,0.162,0.88,0.16l9.76-0.004L30.46,41.58c0.27,0.34,0.679,0.545,1.112,0.541
-      		h1.87c0.992,0,1.676-0.992,1.322-1.918l-6.643-17.439l6.914,0.002l6.038,6.037c0.265,0.266,0.624,0.412,0.999,0.418l1.013-0.004
-      		c1.004-0.002,1.684-1.012,1.312-1.938l-2.911-7.277l2.912-7.278c0.372-0.928-0.313-1.941-1.313-1.938h1.017
-      		c-0.375,0-0.732,0.15-0.996,0.414l-6.039,6.039h-6.915l6.646-17.443c0.354-0.926-0.33-1.916-1.321-1.914l-1.87-0.004
-      		c-0.439,0.004-0.843,0.203-1.112,0.543L15.677,17.24l-9.765-0.002c-0.3,0.002-0.597,0.055-0.879,0.16L0.678,19.03
-      		C-0.225,19.36-0.228,20.637,0.677,20.977z" transform="translate(64,30) rotate(90 0 0)" filter="url(#f1)" />
-          </g>
-        </svg>
-      </div>
-    </div>
-  </div>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="IBST Consulting - Integrated Business Solutions & Technology. Your strategic technology partner for AI, cloud architecture, payment systems, and digital transformation."/><title>IBST Consulting - Enterprise Technology Solutions</title><script defer="defer" src="/static/js/main.5e336257.js"></script><link href="/static/css/main.6a461d9e.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
